--- a/alfateha.html
+++ b/alfateha.html
@@ -15,7 +15,7 @@
         <div class="div0">
        
 
-        <h3> <a href="../index.html"> الصفحة الرئيسية</a></h3>
+        <h3> <a href="../quraan/index.html""> الصفحة الرئيسية</a></h3>
     </div>
     </header>
 <main>
