--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="div0">
-        <h3> <a href="../index.html"> الصفحة الرئيسية</a></h3>
+        <h3> <a href="../quraan/index.html"> الصفحة الرئيسية</a></h3>
     </div>
     </header>
 <main>
@@ -40,9 +40,9 @@
     </section>
 <div  class="div2">
 <ol>
-    <li> <a href="../alfateha.html">الفاتحة</a></li>
-    <li><a href="../albaqra.html"> البقرة</a></li>
-    <li><a href="../alemran.html"> آل عمران
+    <li> <a href="../quraan/alfateha.html">الفاتحة</a></li>
+    <li><a href="../quraan/albaqra.html"> البقرة</a></li>
+    <li><a href="../quraan/alemran.html"> آل عمران
     </a> </li>
     <li>النساء</li>
     <li>المائدة</li>
