--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Amiri:ital@1&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <div class="div0">
-        <h3> <a href="../quraan/index.html"> الصفحة الرئيسية</a></h3>
+        <h3> <a href="../index.html"> الصفحة الرئيسية</a></h3>
     </div>
     </header>
 <main>
@@ -41,9 +40,9 @@
     </section>
 <div  class="div2">
 <ol>
-    <li> <a href="../quraan/alfateha.html">الفاتحة</a></li>
-    <li><a href="../quraan/albaqra.html"> البقرة</a></li>
-    <li><a href="../quraan/alemran.html"> آل عمران
+    <li> <a href="../alfateha.html">الفاتحة</a></li>
+    <li><a href="../albaqra.html"> البقرة</a></li>
+    <li><a href="../alemran.html"> آل عمران
     </a> </li>
     <li>النساء</li>
     <li>المائدة</li>
