--- a/alfateha.html
+++ b/alfateha.html
@@ -15,11 +15,11 @@
         <div class="div0">
        
 
-        <h3> <a href="../index.html"> الصفحة الرئيسية</a></h3>
+        <h3> <a href="index.html"> الصفحة الرئيسية</a></h3>
     </div>
     </header>
 <main>
-    <h1 class="parag0">الفاتحة</h1>
+    <h1 class="parag0"> سورةالفاتحة</h1>
        <h1 class="parag">بِسْمِ اللهِ الرَّحْمنِ الرَّحِيمِ</h1>
        <p class="parag"> 
 الْحَمْدُ للّهِ رَبِّ الْعَالَمِينَ(1)
