--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
           </span> 
    
-   <img src="../img/doaa.png"    class="doaa" >
+   <img src="img/doaa.png"    class="doaa" >
 
     </section>
 <div  class="div2">
 <ol>
-    <li> <a href="../alfateha.html">الفاتحة</a></li>
-    <li><a href="../albaqra.html"> البقرة</a></li>
-    <li><a href="../alemran.html"> آل عمران
+    <li> <a href="alfateha.html">الفاتحة</a></li>
+    <li><a href="albaqra.html"> البقرة</a></li>
+    <li><a href="alemran.html"> آل عمران
     </a> </li>
-    <li>النساء</li>
-    <li>المائدة</li>
+    <li><a href="alnesaa.html">النساء</a></li>
+    <li><a href="almaeda.html">المائدة</a></li>
     <li>الأنعام</li>
     <li>الأعراف</li>
     <li>الأنفال</li>
