--- a/albaqra.html
+++ b/albaqra.html
@@ -18,7 +18,7 @@
 
     <header>
         <div class="div0">
-        <h3> <a href="../index.html"> الصفحة الرئيسية</a></h3>
+        <h3> <a href="index.html"> الصفحة الرئيسية</a></h3>
     </div>
     </header>
 <main>
