--- a/alemran.html
+++ b/alemran.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="div0">
-        <h3> <a href="../index.html"> الصفحة الرئيسية</a></h3>
+        <h3> <a href="index.html"> الصفحة الرئيسية</a></h3>
     </div>
     </header>
 <main>
